# hardcore-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  Spiral.sln  Spiral.vcxproj  Spiral.vcxproj.filters  deny.toml
.github/workflows/: cargo-deny.yml
Client/: Client.aps  Client.rc  Client.vcxproj  Client.vcxproj.filters
Client/resources/shaders/: compile.bat  shader.vert
Client/src/: ELLayer.cpp  ELLayer.hpp  Main.cpp  TestLayer.cpp  TestLayer.hpp
Resources/shaders/: compile.bat
Spiral/: Main.cpp  Spiral.vcxproj  Spiral.vcxproj.filters
Spiral/include/: pch.hpp  spiral.hpp
Spiral/include/Spiral/Core/: Client.hpp  Event.hpp  Layer.hpp  Window.hpp  WindowObject.hpp
Spiral/include/Spiral/Debug/: Log.hpp
Spiral/include/Spiral/Render/: Device.hpp  GraphicsPipeline.hpp  Memory.hpp  Mesh.hpp  RenderCore.hpp  Renderer.hpp  RendererObject.hpp  Shader.hpp  ShaderAPI.hpp  ShaderLibrary.hpp
Spiral/include/cpiral/core/: window_internal.hpp
Spiral/include/cpiral/debug/: log.hpp
Spiral/include/cpiral/render/: graphics_pipeline.hpp  renderer.hpp  shader_internal.hpp  shader_library.hpp
Spiral/include/spiral/core/: api.hpp  client.hpp  core.hpp  entry_point.hpp  event.hpp  static_client.hpp  time.hpp  window.hpp  window_internal.hpp
Spiral/include/spiral/debug/: ANSI_utility.hpp  log.hpp  log_internal.hpp
Spiral/include/spiral/parallel/: result.hpp  task.hpp  thread_manager.hpp
Spiral/src/: Spiral.hpp  Test.cpp  pch.hpp
Spiral/src/Core/: Client.cpp  Event.cpp  Layer.cpp  Window.cpp
Spiral/src/Debug/: Log.cpp
Spiral/src/Render/: Device.cpp  GraphicsPipeline.cpp  Memory.cpp  Renderer.cpp  ShaderLibrary.cpp  Swapchain.cpp
Spiral/src/Spiral/: Client.cpp  Client.hpp  EntryPoint.hpp  Shader.cpp  Shader.hpp  Test.cpp
Spiral/src/Tmp/: Test.cpp
Spiral/src/core/: client.cpp  core.cpp  event.cpp  layer.cpp  static_client.cpp  window.cpp
Spiral/src/debug/: log.cpp
Spiral/src/parallel/: thread_manager.cpp
Spiral/src/render/: device.cpp  graphics_pipeline.cpp  instance.cpp  memory.cpp  pipeline.cpp  renderer.cpp  resource.cpp  shader.cpp  shader_library.cpp  swapchain.cpp
Spiral/src_renaming/Tmp/: Test.hpp
Spiral/src_renaming/core/: client.cpp  event.cpp  layer.cpp
Spiral/src_renaming/debug/: log.cpp
Spiral/src_renaming/render/: graphics_pipeline.cpp  renderer.cpp  shader_library.cpp  swapchain.cpp
cclient/include/: test_layer.hpp
client/: CMakeLists.txt
client/include/: input_test_layer.hpp  test_layer.hpp
client/src/: CMakeLists.txt  input_test_layer.cpp  main.cpp  test_layer.cpp
demo/: CMakeLists.txt  Cargo.toml
demo/fractal/: CMakeLists.txt  layer.cpp  main.cpp
demo/fractal/include/: layer.hpp
demo/fractal/resources/shaders/: shader.frag  shader.vert
democ/fractal/include/: layer.hpp
hardcore/: CMakeLists.txt  Cargo.toml
hardcore-sys/: Cargo.toml  README.md  build.rs
hardcore-sys/hardcore/: CMakeLists.txt
hardcore-sys/hardcore/include/: hardcore.h
hardcore-sys/hardcore/include/core/: core.h  log.h  window.h
hardcore-sys/hardcore/include/render/: buffer.h  descriptor.h  device.h  params.h  renderer.h
hardcore-sys/hardcore/src/: CMakeLists.txt  pch.hpp
hardcore-sys/hardcore/src/core/: CMakeLists.txt  core.cpp  log.cpp  log.hpp  util.hpp  window.cpp  window.hpp
hardcore-sys/hardcore/src/render/: CMakeLists.txt  device.cpp  device.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  util.hpp  vars.hpp
hardcore-sys/hardcore/src/render/device/: CMakeLists.txt  destruction_mark.hpp  graph.cpp  graph.hpp  memory.cpp  memory.hpp  scheduler.cpp  scheduler.hpp  swapchain.cpp  swapchain.hpp
hardcore-sys/hardcore/src/render/device/memory/: CMakeLists.txt  allocation_pool.hpp  heap_manager.cpp  heap_manager.hpp  reference.hpp  resource_pool.cpp  resource_pool.hpp  staging_pool.cpp  staging_pool.hpp
hardcore-sys/hardcore/src/render/resource/: CMakeLists.txt  buffer.cpp  buffer.hpp  descriptor.cpp  descriptor.hpp
hardcore-sys/hardcore/src/util/: bank.hpp  flow.hpp  number.hpp  result.hpp  reverse_bits.hpp  trait.hpp  uncopyable.hpp
hardcore-sys/src/: lib.rs
hardcore/examples/: fractal.rs
hardcore/include/: hardcore.hpp
hardcore/include/hardcore/core/: client.hpp  core.hpp  entry_point.hpp  entry_point_internal.hpp  event.hpp  exception.hpp
hardcore/include/hardcore/io/: file.hpp
hardcore/include/hardcore/parallel/: api.hpp  result.hpp  task.hpp
hardcore/include/hardcore/render/: data_layout.hpp  memory_ref.hpp  pipeline.hpp  renderer.hpp  resource.hpp  shader.hpp
hardcore/src/: CMakeLists.txt  context_token.rs  device.rs  event.rs  input.rs  layer.rs  lib.rs  native.rs  pch.hpp  sync.rs  window.rs
hardcore/src/core/: CMakeLists.txt  client.cpp  entry_point.cpp  event.cpp  layer.cpp  window.cpp  window_internal.hpp
hardcore/src/debug/: CMakeLists.txt  ansi_utility.hpp  log.cpp  log_internal.hpp
hardcore/src/io/: CMakeLists.txt  file.cpp
hardcore/src/parallel/: CMakeLists.txt  concurrent_queue.hpp  thread_manager.cpp  thread_manager.hpp
hardcore/src/render/: CMakeLists.txt  call_instances.hpp  device.cpp  device.hpp  device_heap_manager.cpp  device_heap_manager.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  memory.cpp  memory.hpp  memory_pool.cpp  memory_pool.hpp  memory_reference.cpp  pipeline.cpp  render_core.hpp  renderer.cpp  resource.cpp  resource_pool.cpp  resource_pool.hpp  shader.cpp  shader_internal.hpp  shader_library.cpp  staging_pool.cpp  staging_pool.hpp  swapchain.cpp  swapchain.hpp
hardcore/src/resource/: buffer.rs  descriptor.rs  descriptor_macros.rs  generic.rs  mod.rs  texture.rs  vertex.rs
hardcorec/src/core/: core.cpp  static_client.cpp
hardcorec/src/debug/: log_internal.hpp
hardcorec/src/parallel/: thread_manager.cpp
hardcorec/src/render/: CMakeLists.txt  call_instances.cpp  device.hpp  graph.cpp  graph.hpp  memory.cpp  memory.hpp  pipeline.cpp  render_core.hpp  renderer_internal.hpp  resource.cpp  resource_pool.cpp  resource_pool.hpp  shader_library.cpp  staging_pool.hpp  swapchain.cpp  swapchain.hpp
tests/: Cargo.toml
(+67 files in other folders)
