list(APPEND PROJECT_COMPILE_OPTIONS ${PLATFORM_COMPILE_OPTIONS})

if(CMAKE_BUILD_TYPE MATCHES "Release")
	if(MSVC)
		list(APPEND PROJECT_LINK_OPTIONS ${PLATFORM_LINK_OPTIONS} "/SUBSYSTEM:windows" "/ENTRY:mainCRTStartup")
	endif()
elseif(CMAKE_BUILD_TYPE MATCHES "Debug")
	list(APPEND PROJECT_LINK_OPTIONS ${PLATFORM_LINK_OPTIONS})
else()
endif()

list(JOIN PROJECT_LINK_OPTIONS "," PROJECT_LINK_OPTIONS_STRING)

add_subdirectory(fractal)
