[package]
name = "hardcore"
version = "0.1.0"
description = "A real-time graphical engine library powered by Vulkan."
edition = "2021"
authors = ["Pedro Valente <pedro.amaral.valente@gmail.com>"]
repository = "https://github.com/StrengthDev/hardcore-engine"
readme = "../README.md"
license-file = "../LICENSE"
publish = true

[dependencies]
hardcore-sys = { path = "../hardcore-sys" }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
parking_lot = ["tracing-subscriber/parking_lot"]
